--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 
 jar {
-    baseName = 'demo'
-    version = '0.0.1-SNAPSHOT'
+    baseName = 'eureka-sample'
+    version = ''
 }
+
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
