--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: eureka-sample3
+    name: ${vcap.application.name:eureka-sample}
 
 server:
   port: 8081
@@ -8,10 +8,11 @@ server:
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 5
+    hostname: ${vcap.application.uris[0]:localhost}
     metadataMap:
       instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     serviceUrl:
-      defaultZone: http://admin:admin@localhost:8080/eureka/
+      defaultZone: ${vcap.services.registry.credentials.uri:http://admin:admin@localhost:8080}/eureka/
     availabilityZones:
       default: ${APPLICATION_DOMAIN:${DOMAIN:defaultZone}}
