--- a/manifest.yml
+++ b/manifest.yml
@@ -5,3 +5,5 @@ applications:
   instances: 1
   path: build/libs/eureka-sample.jar
   services: [registry]
+  env:
+    SPRING_PROFILES_ACTIVE: cloud
