--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 	ext {
 		springBootVersion = '1.2.2.RELEASE'
 		springCloudVersion = '1.0.1.RELEASE'
-		springCloudConnectorsVersion = '1.0.0.BUILD-SNAPSHOT'
+		springCloudConnectorsVersion = '1.0.0.M1'
 	}
 	repositories {
 		mavenCentral()
@@ -37,18 +37,18 @@ targetCompatibility = 1.7
 
 repositories {
 	mavenCentral()
-	mavenLocal()
 	maven { url 'https://repo.spring.io/libs-milestone' }
-	maven { url 'https://repo.spring.io/libs-snapshot' }
 }
+
+ext['spring-cloud-connectors.version'] = '1.2.0.RC1'
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile("org.springframework.cloud:spring-cloud-starter-eureka")
 
-    compile("org.springframework.cloud:spring-cloud-pivotal-cloudfoundry-connector:${springCloudConnectorsVersion}")
-    compile("org.springframework.cloud:spring-cloud-pivotal-spring-connector:${springCloudConnectorsVersion}")
+	compile("io.pivotal.spring.cloud:spring-cloud-pivotal-cloudfoundry-connector:${springCloudConnectorsVersion}")
+	compile("io.pivotal.spring.cloud:spring-cloud-pivotal-spring-connector:${springCloudConnectorsVersion}")
 
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
