--- a/manifest.yml
+++ b/manifest.yml
@@ -4,6 +4,4 @@ applications:
   memory: 512M
   instances: 1
   path: build/libs/eureka-sample.jar
-  services: [registry]
-  env:
-    SPRING_PROFILES_ACTIVE: cloud
+  services: [service-registry]
